test/org/midica/testfiles/failing/include-undefined-macro.midica
INCLUDE_FILE inc/instruments.midica

INCLUDE test